--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.speedata.device"
         minSdkVersion 17
@@ -39,17 +39,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.speedata:deivice:1.4.7'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'xyz.reginer:refresh:1.0.5'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'xyz.reginer.baseadapter:baseadapter:1.1.2'
-    testCompile 'junit:junit:4.12'
-    compile 'org.greenrobot:greendao:3.2.0'
+    implementation 'com.speedata:deivice:1.4.7'
+    implementation 'com.android.support:appcompat-v7:25.0.1'
+    implementation 'com.android.support:design:25.0.1'
+    implementation 'xyz.reginer:refresh:1.0.5'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'xyz.reginer.baseadapter:baseadapter:1.1.2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'org.greenrobot:greendao:3.2.0'
 }
 
